--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Myonto
+email: halnader@uwaterloo.ca eschiang@uwaterloo.ca tecojoca@uwaterloo.ca vn3patel@uwaterloo.ca r2senthi@uwaterloo.ca
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hyperhydrosis solution.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+github_username:  myonto
 
 # Build settings
 theme: minima
