--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,20 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Myonto
-email: halnader@uwaterloo.ca eschiang@uwaterloo.ca tecojoca@uwaterloo.ca vn3patel@uwaterloo.ca r2senthi@uwaterloo.ca
+title: myonto
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hyperhydrosis solution.
-baseurl: "" # the subpath of your site, e.g. /blog
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "/myonto.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-github_username:  myonto
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: chrisrhymes/bulma-clean-theme
 plugins:
+  - github-pages
   - jekyll-feed
 
+footer_menu: footer_menu
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
