--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -60,3 +60,6 @@ collections:
     layout: product
     image: https://via.placeholder.com/800x600
     show_sidebar: false
+
+paginate: 5
+paginate_path: "/blog/page:num"
